# AUTOMATE-HUB-BACKEND

./: .env.example  README.md  main.py  pyproject.toml
src/: config.py  main.py
src/auth/application/: issue_token.py  verify_token.py
src/auth/domain/: entities.py  exceptions.py
src/auth/infrastructure/: jwt_provider.py
src/auth/interfaces/: http_router.py  ws_auth_dependency.py
src/infrastructure/: background_runner.py  redis_client.py
src/sessions/application/: create_session.py  list_sessions.py
src/sessions/domain/: entities.py  exceptions.py
src/sessions/infrastructure/: session_repository.py
src/sessions/interfaces/: abstractions.py  http_router.py
src/sessions/tests/: test_session_use_cases.py
src/shared/: base_exception.py  result.py
src/telemetry/application/: ingest_telemetry.py  stream_telemetry.py
src/telemetry/domain/: entities.py  exceptions.py  value_objects.py
src/telemetry/infrastructure/: obd_parser.py  obd_simulator.py  pid_registry.py  redis_broker.py
src/telemetry/interfaces/: abstractions.py  ws_router.py
src/telemetry/tests/: test_obd_simulator.py  test_pid_parser.py  test_redis_broker.py
