[project]
name = "automat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "redis>=8.0.0",
    "uvicorn[standard]>=0.48.0",
    "websockets>=16.0",
]

[tool.pyright]
include = ["src"]
executionEnvironments = [
  { root = "." }
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
